--- a/public/views/puzzle-solve.html
+++ b/public/views/puzzle-solve.html
@@ -50,5 +50,12 @@
                 </div>
             </div>
         </div>
+        <div id="div-twitter-share" style="
+    position: absolute;
+    right: 10px;
+    bottom: 10px;">
+            <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Try%20this%20crossword%20puzzle" data-size="large">.</a>
+            <link rel="canonical" href="http://rnkpd.com/#/puzzles/solve/{{pctrl.puzzle.slug}}">
+        </div>
     </div>
 </div>
