Capture temporary users' ip address

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -4,6 +4,15 @@
     <aside id="sidebar" data-ng-include="'template/sidebar-left.html'" data-ng-class="{ 'toggled': mactrl.sidebarToggle.left === true }"></aside>
 
     <section id="content">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Leaderboard Banner -->
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:728px;height:90px"
+         data-ad-client="ca-pub-5097355451130126"
+         data-ad-slot="9509891890"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 
         <div class="container" data-ng-controller="dashboardCtrl as dctrl">
             <div class="block-header">
