--- a/public/views/puzzle-solve.html
+++ b/public/views/puzzle-solve.html
@@ -1,13 +1,5 @@
 <div class="container" data-ng-controller="puzzleSolveCtrl as pctrl" ng-keydown="pctrl.keyDown($event)">
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- Leaderboard Banner -->
-    <ins class="adsbygoogle"
-         style="display:inline-block;width:728px;height:90px"
-         data-ad-client="ca-pub-5097355451130126"
-         data-ad-slot="9509891890"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    <a href="http://www.adsella.com"><iframe src = "http://www.adsella.com/marketplace/ServeAd.php?id=5402&key=74257651796399" frameborder="0"  width="468" height="60" scrolling="no"></iframe></a>
     <div class="card card-puzzle-solve">
         <div class="card-header" style="z-index:3">
             <h2>{{pctrl.puzzle.name}}</h2>
