--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -17,11 +17,11 @@
                 </div>
             </div>
 
-            <div class="pmo-block pmo-contact hidden-xs">
+            <!-- <div class="pmo-block pmo-contact hidden-xs">
                 <ul>
                     <li><a href="https://twitter.com/{{ pctrl.profile.twitter_handle }}" target="_new"><i class="zmdi zmdi-twitter"></i> twitter.com/{{ pctrl.profile.twitter_handle }}</a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
 
         <div class="pm-body clearfix">
