--- a/public/template/sidebar-left.html
+++ b/public/template/sidebar-left.html
@@ -35,7 +35,7 @@
             </ul>
         </li>
  
-        <li class="sub-menu" data-ng-class="{ 'active toggled': mactrl.$state.includes('puzzle-templates') }">
+        <li ng-show="{{profile.admin}}" class="sub-menu" data-ng-class="{ 'active toggled': mactrl.$state.includes('puzzle-templates') }">
             <a href="" toggle-submenu><i class="zmdi zmdi-collection-text"></i> Templates</a>
             <ul>
                 <li><a data-ui-sref-active="active" data-ui-sref="puzzle-templates.list" data-ng-click="mactrl.sidebarStat($event)">List</a></li>
