--- a/public/template/footer.html
+++ b/public/template/footer.html
@@ -1,7 +1,8 @@
-Made by Cory Martin - 2016
+Made by Kelompok 5 Rekayasa Perangkat Lunak - 2020
 
 <ul class="f-menu">
     <li><a href="/#/">Home</a></li>
-    <li><a href="https://github.com/murribu/crossword">Github</a></li>
-    <li><a href="https://twitter.com/murribu">Contact</a></li>
+    <!-- <li><a href="https://github.com/murribu/crossword">Github</a></li> -->
+    <!-- <li><a href="https://twitter.com/farhansetyadi">Contact</a></li> -->
+    <!-- <li><a href="https://twitter.com/murribu">email</a></li> -->
 </ul>
