--- a/public/views/puzzle-edit.html
+++ b/public/views/puzzle-edit.html
@@ -57,7 +57,7 @@
                     <div class="btn btn-primary" ng-click="pctrl.saveClue()">Save Clue</div>
                 </div>
             </div>
-            <div class="suggestions" ng-show="pctrl.selectedRow > 0 && pctrl.selectedCol > 0 && pctrl.puzzle.puzzle_squares[pctrl.currentSuggestionRequest].letter == ''">
+            <!-- <div class="suggestions" ng-show="pctrl.selectedRow > 0 && pctrl.selectedCol > 0 && pctrl.puzzle.puzzle_squares[pctrl.currentSuggestionRequest].letter == ''">
                 <h3>Suggestions</h3>
                 <table>
                     <thead>
@@ -78,7 +78,7 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>
+            </div> -->
             <div class="row" style="margin-top: 20px;">
                 <div class="btn btn-primary bottom-right-button" ng-click="pctrl.create()" data-create-puzzle-warning data-puzzle-slug="{{pctrl.puzzle.slug}}">Create</div>
             </div>
