--- a/public/template/header.html
+++ b/public/template/header.html
@@ -14,12 +14,12 @@
     <li class="pull-right">
         <ul class="top-menu">
 
-            <li id="toggle-width">
+            <!-- <li id="toggle-width">
                 <div class="toggle-switch">
                     <input id="tw-switch" type="checkbox" hidden="hidden" data-change-layout="mactrl.layoutType">
                     <label for="tw-switch" class="ts-helper"></label>
                 </div>
-            </li>
+            </li> -->
 
             <li class="dropdown" dropdown>
                 <a dropdown-toggle class="tm-settings" href=""></a>
