--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -35,7 +35,7 @@
                         <div id="recent-items-chart" class="flot-chart" data-line-chart></div>
                     </div>
                 </div>
-                <div class="col-sm-6" ng-show="dctrl.incompletePuzzles.length > 0">
+                <!-- <div class="col-sm-6" ng-show="dctrl.incompletePuzzles.length > 0">
                     <div class="card">
                         <div class="card-header">
                             <h2>Your incomplete puzzles</h2>
@@ -52,7 +52,7 @@
                             </table>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
